--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -39,7 +39,7 @@
          </div>
          </div>
          <div class="col-md-6">  
-            <div class="design-right">
+            <div class="design-right img_cover">
                 <ul class="logo">
                 <li>
                   <img src="./assets/images/services/logo-2.svg">
@@ -56,6 +56,26 @@
             </div>
             </div>
          </div>
+         <div class="flex only-mobile">
+            <div class="icon1">
+               <img src="./assets/images/about/logo-1.svg">
+            </div>
+            <div class="icon2">
+               <img src="./assets/images/about/logo-2.svg">
+            </div>
+            <div class="icon3">
+               <img src="./assets/images/about/logo-3.svg">
+            </div>
+            <div class="icon4">
+               <img src="./assets/images/about/logo-4.svg">
+            </div>
+            <div class="icon5">
+               <img src="./assets/images/about/logo-5.svg">
+            </div>
+            <div class="icon6">
+               <img src="./assets/images/about/logo-6.svg">
+            </div>
+         </div>
       </div>
       </div>
    <div class="about-layout1">
@@ -70,11 +90,11 @@
             </div>
          </div>
          </div>
-         <div class="col-md-6 design-layouts">
+         <div class="col-md-6 design-layouts ">
            <div class="layouts">
             <div class="design-right">
                <h5>Startups</h5>
-               <p>We've been there and we exactly know the struggles and whst it takes to build a product from  the scrarch. We have the expertise to validate your ideas with the right process and to bring the right solutions for your target customers and ensure a</p>
+               <p>We've been there and we exactly know the struggles and whst it takes to build a product from  the scrarch. We have the expertise to validate your ideas with the right process and to bring the right solutions for your target customers and ensure a successful launch</p>
             </div>
             <div class="design-right">
                <h5>Established Brands</h5>
@@ -96,3 +116,4 @@
       </div>
    </div>
 </div>
+
