--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 /* Font */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&display=swap');
 
-html, body { height: 100%; }
+html, body { height: 100%;overflow-x: hidden; }
 body { margin: 0; font-family: 'Inter', sans-serif; }
 
 /* Responsive */
