--- a/src/app/components/engagement-models/engagement-models.component.scss
+++ b/src/app/components/engagement-models/engagement-models.component.scss
@@ -11,7 +11,7 @@
         position: relative;
         height: 770px;
         background-color: #FA6D37;
-        border-bottom: 1px solid #dee2e6;
+        border-bottom: 1px solid #F49875;
 
         .engagement-layout{
             padding: 300px 30px;
