--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -1,5 +1,156 @@
 <div class="services">
     <div class="layout">
-        <div class="container"></div>
+        <div class="container">
+            <h1>Enhance your product with</h1>
+            <h2>the right strategy</h2>
+            <h3><a>let us know</a> what you are looking for</h3>
+        </div>
+    </div>
+    <div class="types">
+        <div class="container">
+            <div class="d-flex">
+                <ul ngbNav #nav1="ngbNav" [(activeId)]="active1" class="nav-pills" orientation="vertical">
+                  <li ngbNavItem="user-experience">
+                    <a ngbNavLink>User Experience</a>
+                    <ng-template ngbNavContent>
+                      <h2>User Experience</h2>
+                      <p>Unravelling solutions for business problems in alignment with end-user expectations. 
+                          Creating functional, Usable, Pleasurable Unique and Value for digital products.</p>
+                      <div class="button">
+                          <div class="btn">See More <img src="./assets/images/services/blue-arrow.png"></div>
+                      </div>
+                    </ng-template>
+                  </li>
+                  <li ngbNavItem="interface-design">
+                    <a ngbNavLink>Interface Design</a>
+                    <ng-template ngbNavContent>
+                    <h2>Interface Design</h2>
+                      <p>Aesthetically good design can instil curiosity for the customers to move beyond the 
+                          landing page. Make your website come alive with best UI.</p>
+                      <div class="button">
+                        <div class="btn">See More <img src="./assets/images/services/blue-arrow.png"></div>
+                    </div>
+                    </ng-template>
+                  </li>
+                  <li ngbNavItem="ui-development">
+                    <a ngbNavLink>UI Development</a>
+                    <ng-template ngbNavContent>
+                      <h2>UI Development</h2>
+                      <p>The design comes to life when the robust technologies are put in place to experience 
+                          the best.</p>
+                      <div class="button">
+                        <div class="btn">See More <img src="./assets/images/services/blue-arrow.png"></div>
+                    </div>
+                    </ng-template>
+                  </li>
+                  <li ngbNavItem="end-to-end-development">
+                    <a ngbNavLink>End To End Development</a>
+                    <ng-template ngbNavContent>
+                        <h2>End To End Development</h2>
+                        <p>Designing scalable platform harnessing the technology for business reach to their end 
+                            users with the better user experience, engagement and adaptablity.</p>
+                        <div class="button">
+                            <div class="btn">See More <img src="./assets/images/services/blue-arrow.png"></div>
+                        </div>
+                    </ng-template>
+                  </li>
+                  <li ngbNavItem="usability-testing">
+                    <a ngbNavLink>Usability Testing</a>
+                    <ng-template ngbNavContent>
+                        <h2>Usability Testing</h2>
+                        <p>Best of the designs, is the design that evolves and adapts as per user’s mental model. 
+                            It helps the business to evaluates the product or website before it is launched.</p>
+                        <div class="button">
+                            <div class="btn">See More <img src="./assets/images/services/blue-arrow.png"></div>
+                        </div>
+                    </ng-template>
+                  </li>
+                </ul>
+              
+                <div [ngbNavOutlet]="nav1" class="ml-4 px-5"></div>
+            </div>
+        </div>
+    </div>
+    <div class="cater">
+        <div class="container">
+            <div class="d-flex">
+                <ul ngbNav #nav2="ngbNav" [(activeId)]="active2" class="nav-pills" orientation="vertical">
+                  <li ngbNavItem="enterprise-applications">
+                    <a ngbNavLink>Enterprise Applications</a>
+                    <ng-template ngbNavContent>
+                      <h2>Enterprise Applications</h2>
+                      <p>Prioritizing the road map with the key features involved is the key for designing 
+                        Enterprise Applications. It involves closely working with the internal business and product 
+                        teams; aligning the mission and vision with the key Stakeholders of the business. 
+                        Our consultants work as a true extension of the internal teams to bring the key changes 
+                        required in designing the application which acts as the backbone of the Core Business.</p>
+                    </ng-template>
+                  </li>
+                  <li ngbNavItem="information-portals">
+                    <a ngbNavLink>Information Portals</a>
+                    <ng-template ngbNavContent>
+                    <h2>Information Portals</h2>
+                      <p>Discussion with the stakeholders to set the pitch and get the inputs 
+                        of target audience to focus on customer engagement and conversion. Building the face of your business 
+                        that speaks of the product or service offered and acts as the gateway for your business 
+                        transactions.</p>
+                    </ng-template>
+                  </li>
+                  <li ngbNavItem="product-development">
+                    <a ngbNavLink>Product Development</a>
+                    <ng-template ngbNavContent>
+                      <h2>Product Development</h2>
+                      <p>Beginning from Ideation to Market Launch our Consultants can help you bring 
+                        the product live. Our consultants can work as a true extension of internal business or development team. 
+                        The key for a Product Development is understand the Market; deep Research brings key Insights for 
+                        product development.<br>
+                        Urban & Hauser outline a range of new product development strategies  companies should consider. 
+                        They are classified as Reactive or Proactive, depending on how a company handles pressures from the 
+                        market and how it decides to use external and internal sources of product development.</p>
+                    </ng-template>
+                  </li>
+                  <li ngbNavItem="digital-transformation">
+                    <a ngbNavLink>Digital Transformation</a>
+                    <ng-template ngbNavContent>
+                        <h2>Digital Transformation</h2>
+                        <p>Transform the legacy system by reimagining the Process to embrace 
+                          Continuous Improvement & Innovation to elevate customer experience. A digital transformation 
+                          strategy can immensely help transform the business, streamline process with the use of latest 
+                          technologies for better customer experience and delivery better productivity.<br>
+                          The concern for many businesses can be, Are we too late to begin now?  It’s never too late to 
+                          begin, it is better to start now than never. In fact, digital speed is as much as 5 times faster 
+                          than a traditional business, and that pace is essential to becoming a  pioneer in the business 
+                          domain. Those companies at the forefront of the digital revolution earn much more authority, 
+                          trust and respect from customers.</p>
+                    </ng-template>
+                  </li>
+                  <li ngbNavItem="strategy-design">
+                    <a ngbNavLink>Strategy Design</a>
+                    <ng-template ngbNavContent>
+                        <h2>Strategy Design</h2>
+                        <p>Defining every aspect of the process from the all the channel (physical and 
+                          digital) before the initiating the design phase give the team a clear direction on the features to be 
+                          worked upon. This helps to target the challenges, user needs, aspiration, focus area to narrow down to 
+                          the solutions and thereby validate the ideas - set the milestones and deliver them as expected with 
+                          fewer misunderstanding and lesser rework.</p>
+                    </ng-template>
+                  </li>
+                  <li ngbNavItem="mobile-applications">
+                    <a ngbNavLink>Mobile Applications</a>
+                    <ng-template ngbNavContent>
+                        <h2>Mobile Applications</h2>
+                        <p>Mobile Apps have the potential to increase the business productivity 
+                          multi-fold by being in the field. Helps your product to reach masses and plays a critical role for 
+                          reaching the customers. With the need for constant updates and customer interaction the demand for 
+                          mobile apps have increased multi-fold. Aligning with the Native Ecosystem is the key to design for 
+                          Android & iOS which helps in easier adaptability. Our designers can churn the right features and 
+                          engagement with the best of customer experience.</p>
+                    </ng-template>
+                  </li>
+                </ul>
+              
+                <div [ngbNavOutlet]="nav2" class="ml-4 px-5"></div>
+            </div>
+        </div>
     </div>
 </div>
